[package]
name = "solar_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
eframe = "0.32.3"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
rfd = "0.15.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.226", features = ["derive"] }
