[package]
name = "udp2sqlite_async"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
binrw = "0.15.0"
clap = { version = "4.5", features = ["derive"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = "1.1.14"
tokio = { version = "1.47", features = ["net", "rt-multi-thread", "macros"] }
